--- a/pom.xml
+++ b/pom.xml
@@ -35,15 +35,9 @@
 
     <modules>
         <module>core</module>
-        <module>payment</module>
-        <module>shop</module>
-        <module>product</module>
-        <module>prodorder</module>
-        <module>gateway</module>
+        <module>aftersales</module>
         <module>alipay</module>
         <module>wechatpay</module>
-        <module>region</module>
-        <module>freight</module>
         <module>sfexpress</module>
         <module>jtexpress</module>
     </modules>
