--- a/aftersales/pom.xml
+++ b/aftersales/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>org.example</groupId>
-    <artifactId>aftersale</artifactId>
+    <artifactId>aftersales</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>aftersale</name>
     <description>aftersale</description>
@@ -72,6 +72,11 @@
             <artifactId>mybatis-spring-boot-starter-test</artifactId>
             <version>3.0.3</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>1.2.23</version>
         </dependency>
     </dependencies>
 
