我是奶龙哈哈哈

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
 
     <modules>
         <module>core</module>
+        <module>prodorder</module>
         <module>aftersales</module>
         <module>alipay</module>
         <module>wechatpay</module>
