--- a/aftersales/pom.xml
+++ b/aftersales/pom.xml
@@ -78,6 +78,18 @@
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>1.2.23</version>
         </dependency>
+        <dependency>
+            <groupId>cn.edu.xmu.javaee</groupId>
+            <artifactId>core</artifactId>
+            <version>0.0.3-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>cn.edu.xmu.oomall</groupId>
+            <artifactId>prodorder</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
